/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/**
 * Dataset messages/enums used by job.proto
 */
syntax="proto2";
package com.dremio.service.namespace.dataset.proto;

option java_package = "com.dremio.service.namespace.dataset.proto";
option optimize_for = SPEED;

option java_outer_classname = "DatasetCommonProtobuf";

/// Dataset types
enum DatasetType {
  INVALID_DATASET_TYPE = 0;
  VIRTUAL_DATASET = 1;
  PHYSICAL_DATASET = 2;
  PHYSICAL_DATASET_SOURCE_FILE = 3;
  PHYSICAL_DATASET_SOURCE_FOLDER = 4;
  PHYSICAL_DATASET_HOME_FILE = 5;
  PHYSICAL_DATASET_HOME_FOLDER = 6;
}

message FieldOrigin {
  required string name = 1;
  repeated Origin origins = 2;
}

message Origin {
  repeated string table = 1;
  required string columnName = 2;
  required bool derived = 3;
}

message ParentDataset { // TODO: better name DatasetPath?
  repeated string datasetPath = 1;
  optional int32 level = 2; // 1 if its a parent, 2 if its parent of parent and so on
  optional DatasetType type = 3;
}

// view info
// a field of a view
message ViewFieldType {
  required string name = 1;
  required string type = 2;
  optional int32 precision = 3;
  optional int32 scale = 4;
  optional string startUnit = 5;
  optional string endUnit = 6;
  optional int32 fractionalSecondPrecision = 7;
  optional bool isNullable = 8;
  optional string typeFamily = 9;
}
